--- a/places.html
+++ b/places.html
@@ -1855,7 +1855,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -2570,7 +2570,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -3282,7 +3282,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -3994,7 +3994,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -4706,7 +4706,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -5410,7 +5410,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -6124,7 +6124,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -6836,7 +6836,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -7468,7 +7468,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -8100,7 +8100,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -8813,7 +8813,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -9526,7 +9526,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -10238,7 +10238,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -10950,7 +10950,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -11662,7 +11662,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
@@ -12368,7 +12368,7 @@
                                   <div class="_1fkcxb46">
                                     <div class="_zhz0z8">
                                       <div
-                                        class="c1aqm3wp dir dir-ltr"
+                                        class="explore__carousel-card dir dir-ltr"
                                         role="group"
                                       >
                                         <a
