--- a/account-notifications.html
+++ b/account-notifications.html
@@ -359,7 +359,7 @@
                                     >
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -458,7 +458,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -516,7 +516,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -575,7 +575,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -699,7 +699,7 @@
                                     >
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -799,6 +799,7 @@
                                       <div class="margin__y-24">
                                         <section>
                                           <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -837,7 +838,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
+                                          <div class="section-header-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -1154,7 +1155,7 @@
                                         >
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1255,7 +1256,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1313,7 +1314,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1372,7 +1373,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1496,7 +1497,7 @@
                                         >
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1595,7 +1596,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1634,7 +1635,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="tab__header-text">
+                                              <div class="section-header-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -2364,7 +2365,7 @@
                 </header>
                 <div class="modal__body" data-testid="channel-optout-modal">
                   <section>
-                    <div class="tab__header-text">
+                    <div class="section-header-semibold">
                       <h2
                         tabindex="-1"
                         class="heading"
