--- a/specific_trip.html
+++ b/specific_trip.html
@@ -961,7 +961,7 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="_1okosyw"
+                                                    class="section-header-semibold"
                                                     data-testid="reservation-section-header"
                                                   >
                                                     <h2
@@ -1217,7 +1217,7 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="_1okosyw"
+                                                    class="section-header-semibold"
                                                     data-testid="reservation-section-header"
                                                   >
                                                     <h2
@@ -1333,7 +1333,7 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="_1okosyw"
+                                                    class="section-header-semibold"
                                                     data-testid="reservation-section-header"
                                                   >
                                                     <h2
@@ -1698,7 +1698,7 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="_1okosyw"
+                                                    class="section-header-semibold"
                                                     data-testid="reservation-section-header"
                                                   >
                                                     <h2
@@ -1795,7 +1795,7 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="_1okosyw"
+                                                    class="section-header-semibold"
                                                     data-testid="reservation-section-header"
                                                   >
                                                     <h2
