refactor section-header -> section-heading

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -359,7 +359,7 @@
                                     >
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -458,7 +458,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -516,7 +516,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -575,7 +575,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -699,7 +699,7 @@
                                     >
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -798,8 +798,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="tab__header-text">
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -838,7 +837,7 @@
                                       <hr class="tab__content-divider" />
                                       <div class="margin__y-24">
                                         <section>
-                                          <div class="section-header-semibold">
+                                          <div class="section-heading-semibold">
                                             <h1
                                               tabindex="-1"
                                               class="heading"
@@ -1155,7 +1154,7 @@
                                         >
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1256,7 +1255,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1314,7 +1313,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1373,7 +1372,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1497,7 +1496,7 @@
                                         >
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1596,7 +1595,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -1635,7 +1634,7 @@
                                           <hr class="tab__content-divider" />
                                           <div class="margin__y-24">
                                             <section>
-                                              <div class="section-header-semibold">
+                                              <div class="section-heading-semibold">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -2365,7 +2364,7 @@
                 </header>
                 <div class="modal__body" data-testid="channel-optout-modal">
                   <section>
-                    <div class="section-header-semibold">
+                    <div class="section-heading-semibold">
                       <h2
                         tabindex="-1"
                         class="heading"
