--- a/specific_trip.html
+++ b/specific_trip.html
@@ -961,8 +961,8 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="section-header-semibold"
-                                                    data-testid="reservation-section-header"
+                                                    class="section-heading-semibold"
+                                                    data-testid="reservation-section-heading"
                                                   >
                                                     <h2
                                                       tabindex="-1"
@@ -1217,8 +1217,8 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="section-header-semibold"
-                                                    data-testid="reservation-section-header"
+                                                    class="section-heading-semibold"
+                                                    data-testid="reservation-section-heading"
                                                   >
                                                     <h2
                                                       tabindex="-1"
@@ -1333,8 +1333,8 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="section-header-semibold"
-                                                    data-testid="reservation-section-header"
+                                                    class="section-heading-semibold"
+                                                    data-testid="reservation-section-heading"
                                                   >
                                                     <h2
                                                       tabindex="-1"
@@ -1698,8 +1698,8 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="section-header-semibold"
-                                                    data-testid="reservation-section-header"
+                                                    class="section-heading-semibold"
+                                                    data-testid="reservation-section-heading"
                                                   >
                                                     <h2
                                                       tabindex="-1"
@@ -1795,8 +1795,8 @@
                                                 <div class="_1jis96s"></div>
                                                 <div class="_1kzl5xpb">
                                                   <div
-                                                    class="section-header-semibold"
-                                                    data-testid="reservation-section-header"
+                                                    class="section-heading-semibold"
+                                                    data-testid="reservation-section-heading"
                                                   >
                                                     <h2
                                                       tabindex="-1"
