--- a/account-settings.html
+++ b/account-settings.html
@@ -849,8 +849,8 @@
                                       </div></a
                                     >
                                   </div>
-                                  <div class="_ek22ai">
-                                    <div class="_152qbzi">
+                                  <div class="footer__main">
+                                    <div class="margin__bottom-24">
                                       <div class="flex">
                                         <span class="_19c5bku"
                                           ><button
@@ -915,8 +915,8 @@
                                         margin-bottom: 24px;
                                       "
                                     >
-                                      <div class="_w688nhn">
-                                        <ul class="_11hau3k">
+                                      <div class="footer__menu">
+                                        <ul class="footer__menu-ul">
                                           <li class="inline">
                                             <a href="/help" class="explore-click"
                                               >Help &amp; support</a
