--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -293,7 +293,7 @@
                                               Keep track of all your payments
                                               and refunds.
                                             </div>
-                                            <div class="_w99wiq">
+                                            <div class="button__mt-24">
                                               <a
                                                 href="/account-settings/payments/your-payments"
                                                 class="btn-dark"
@@ -1041,7 +1041,7 @@
                                               Keep track of all your payments
                                               and refunds.
                                             </div>
-                                            <div class="_w99wiq">
+                                            <div class="button__mt-24">
                                               <a
                                                 href="/account-settings/payments/your-payments"
                                                 class="btn-dark"
