--- a/personal-info.html
+++ b/personal-info.html
@@ -943,7 +943,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_w99wiq">
+                                    <div class="button__mt-24">
                                       <button type="button" class="btn-outline">
                                         Add another number
                                       </button>
@@ -4363,7 +4363,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_w99wiq">
+                                        <div class="button__mt-24">
                                           <button
                                             type="button"
                                             class="btn-outline"
