--- a/profile.html
+++ b/profile.html
@@ -736,7 +736,7 @@
                                         </div>
                                         <div>
                                           <section>
-                                            <div class="_152qbzi">
+                                            <div class="margin__bottom-24">
                                               <h2
                                                 tabindex="-1"
                                                 class="heading"
@@ -1889,7 +1889,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   </div>
                                   <div>
                                     <section>
-                                      <div class="_152qbzi">
+                                      <div class="margin__bottom-24">
                                         <h2
                                           tabindex="-1"
                                           class="heading"
