--- a/edit/bring.html
+++ b/edit/bring.html
@@ -84,7 +84,7 @@
                         <h2 id="edit-experience-modal-heading" class="_7x5ntq">
                           Edit experience
                         </h2>
-                        <div class="_152qbzi">
+                        <div class="margin__bottom-24">
                           <button type="button" class="_7qynsb1">
                             Add dates
                           </button>
