--- a/invite-friends.html
+++ b/invite-friends.html
@@ -802,7 +802,7 @@
             >
               <section>
                 <div class="_wpwi48">
-                  <div class="_152qbzi">
+                  <div class="margin__bottom-24">
                     <button
                       type="button"
                       class="_1rp5252"
