--- a/signup_login.html
+++ b/signup_login.html
@@ -1973,7 +1973,7 @@
                                       More options
                                     </button>
                                   </p>
-                                  <div class="_w99wiq"></div>
+                                  <div class="button__mt-24"></div>
                                   <div
                                     id="airlock-inline-container"
                                     aria-live="polite"
@@ -5011,7 +5011,7 @@
                                     More options
                                   </button>
                                 </p>
-                                <div class="_w99wiq"></div>
+                                <div class="button__mt-24"></div>
                                 <div
                                   id="airlock-inline-container"
                                   aria-live="polite"
@@ -6847,7 +6847,7 @@
                                       name="redirect_url"
                                       value="/"
                                     />
-                                    <div class="_152qbzi">
+                                    <div class="margin__bottom-24">
                                       <section
                                         role="status"
                                         class="e1rue1xl i144hzgs dir dir-ltr"
