--- a/merchandising.html
+++ b/merchandising.html
@@ -4497,7 +4497,7 @@
                                                                   class="_yu5dnq"
                                                                 >
                                                                   <div
-                                                                    class="c1nifi44 l16t0m55 dir dir-ltr"
+                                                                    class="header__search-tabs-filter-body l16t0m55 dir dir-ltr"
                                                                     data-testid="structured-search-input-field-query-panel"
                                                                   >
                                                                     <section>
@@ -4512,19 +4512,19 @@
                                                                           tabindex="-1"
                                                                         >
                                                                           <div
-                                                                            class="krm8eud kn3kizz dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-recent kn3kizz dir dir-ltr"
                                                                           >
                                                                             <div
                                                                               role="group"
-                                                                              class="_1s4do1s"
+                                                                              class="header__search-tabs-filter-body-where-recent-items"
                                                                               aria-labelledby="savedSearches-recent-searches"
                                                                             >
                                                                               <div
-                                                                                class="_19v1su91"
+                                                                                class="header__search-tabs-filter-body-where-recent-label"
                                                                                 id="savedSearches-recent-searches"
                                                                               >
                                                                                 <span
-                                                                                  class="_12fzrr2"
+                                                                                  class="header__search-tabs-filter-body-where-recent-label-text"
                                                                                   >Recent
                                                                                   searches</span
                                                                                 >
@@ -4535,10 +4535,10 @@
                                                                                 id="bigsearch-query-location-suggestion-0"
                                                                                 data-index="0"
                                                                                 data-testid="option-0"
-                                                                                class="_uzocf2"
+                                                                                class="header__search-tabs-filter-body-where-recent-item"
                                                                               >
                                                                                 <div
-                                                                                  class="_bi8puq"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-icon"
                                                                                 >
                                                                                   <svg
                                                                                     viewBox="0 0 32 32"
@@ -4559,10 +4559,10 @@
                                                                                   </svg>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1825a1k"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-label"
                                                                                 >
                                                                                   <div
-                                                                                    class="_r1t6ga"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-location"
                                                                                   >
                                                                                     Swiss
                                                                                     Alps
@@ -4570,7 +4570,7 @@
                                                                                     Stays
                                                                                   </div>
                                                                                   <div
-                                                                                    class="_i1xie3"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-date"
                                                                                   >
                                                                                     Any
                                                                                     week
@@ -4583,10 +4583,10 @@
                                                                                 id="bigsearch-query-location-suggestion-1"
                                                                                 data-index="1"
                                                                                 data-testid="option-1"
-                                                                                class="_uzocf2"
+                                                                                class="header__search-tabs-filter-body-where-recent-item"
                                                                               >
                                                                                 <div
-                                                                                  class="_bi8puq"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-icon"
                                                                                 >
                                                                                   <svg
                                                                                     viewBox="0 0 32 32"
@@ -4607,10 +4607,10 @@
                                                                                   </svg>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1825a1k"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-label"
                                                                                 >
                                                                                   <div
-                                                                                    class="_r1t6ga"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-location"
                                                                                   >
                                                                                     Los
                                                                                     Angeles
@@ -4618,7 +4618,7 @@
                                                                                     Stays
                                                                                   </div>
                                                                                   <div
-                                                                                    class="_i1xie3"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-date"
                                                                                   >
                                                                                     Any
                                                                                     week
@@ -4631,10 +4631,10 @@
                                                                                 id="bigsearch-query-location-suggestion-2"
                                                                                 data-index="2"
                                                                                 data-testid="option-2"
-                                                                                class="_uzocf2"
+                                                                                class="header__search-tabs-filter-body-where-recent-item"
                                                                               >
                                                                                 <div
-                                                                                  class="_bi8puq"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-icon"
                                                                                 >
                                                                                   <svg
                                                                                     viewBox="0 0 32 32"
@@ -4655,10 +4655,10 @@
                                                                                   </svg>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1825a1k"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-label"
                                                                                 >
                                                                                   <div
-                                                                                    class="_r1t6ga"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-location"
                                                                                   >
                                                                                     Paranaque
                                                                                     City
@@ -4666,7 +4666,7 @@
                                                                                     Stays
                                                                                   </div>
                                                                                   <div
-                                                                                    class="_i1xie3"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-date"
                                                                                   >
                                                                                     Any
                                                                                     weekend
@@ -4679,10 +4679,10 @@
                                                                                 id="bigsearch-query-location-suggestion-3"
                                                                                 data-index="3"
                                                                                 data-testid="option-3"
-                                                                                class="_uzocf2"
+                                                                                class="header__search-tabs-filter-body-where-recent-item"
                                                                               >
                                                                                 <div
-                                                                                  class="_bi8puq"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-icon"
                                                                                 >
                                                                                   <svg
                                                                                     viewBox="0 0 32 32"
@@ -4703,17 +4703,17 @@
                                                                                   </svg>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1825a1k"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-label"
                                                                                 >
                                                                                   <div
-                                                                                    class="_r1t6ga"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-location"
                                                                                   >
                                                                                     Manila
                                                                                     ·
                                                                                     Stays
                                                                                   </div>
                                                                                   <div
-                                                                                    class="_i1xie3"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-date"
                                                                                   >
                                                                                     Any
                                                                                     week
@@ -4726,10 +4726,10 @@
                                                                                 id="bigsearch-query-location-suggestion-4"
                                                                                 data-index="4"
                                                                                 data-testid="option-4"
-                                                                                class="_uzocf2"
+                                                                                class="header__search-tabs-filter-body-where-recent-item"
                                                                               >
                                                                                 <div
-                                                                                  class="_bi8puq"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-icon"
                                                                                 >
                                                                                   <svg
                                                                                     viewBox="0 0 32 32"
@@ -4750,17 +4750,17 @@
                                                                                   </svg>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1825a1k"
+                                                                                  class="header__search-tabs-filter-body-where-recent-item-label"
                                                                                 >
                                                                                   <div
-                                                                                    class="_r1t6ga"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-location"
                                                                                   >
                                                                                     Baguio
                                                                                     ·
                                                                                     Stays
                                                                                   </div>
                                                                                   <div
-                                                                                    class="_i1xie3"
+                                                                                    class="header__search-tabs-filter-body-where-recent-item-date"
                                                                                   >
                                                                                     Any
                                                                                     week
