Rename header__search date-tabs

--- a/explore-when.html
+++ b/explore-when.html
@@ -207,13 +207,13 @@
                                                       <div
                                                         class="tyip4q0 dir dir-ltr"
                                                       >
-                                                        <div class="_u02imw">
+                                                        <div class="header__search-tabs-filter-body-date">
                                                           <div
-                                                            class="_1kyyc1p"
+                                                            class="header__search-tabs-filter-body-date-tabs"
                                                             data-testid="tab-list-wrapper"
                                                           >
                                                             <div
-                                                              class="_1rzjy36"
+                                                              class="header__search-tabs-filter-body-date-tabs-container"
                                                               role="tablist"
                                                             >
                                                               <button
@@ -221,7 +221,7 @@
                                                                 id="tab--tabs--0"
                                                                 aria-controls="panel--tabs--0"
                                                                 aria-selected="true"
-                                                                class="_d09hfbg"
+                                                                class="header__search-tabs-filter-body-date-tabs-active"
                                                                 role="tab"
                                                               >
                                                                 Choose dates</button
@@ -230,7 +230,7 @@
                                                                 id="tab--tabs--1"
                                                                 aria-controls="panel--tabs--1"
                                                                 aria-selected="false"
-                                                                class="_19471dk"
+                                                                class="header__search-tabs-filter-body-date-tabs-btn"
                                                                 role="tab"
                                                                 tabindex="-1"
                                                               >
